[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/board.png" type="Texture" id=1]
[ext_resource path="res://objects/DivingBoard.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 24 )

[node name="DivingBoard" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="JumpDetect" type="Area2D" parent="."]
position = Vector2( 20, -1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpDetect"]
shape = SubResource( 2 )

[connection signal="body_entered" from="JumpDetect" to="." method="_on_JumpDetect_body_entered"]
[connection signal="body_exited" from="JumpDetect" to="." method="_on_JumpDetect_body_exited"]
